# ai-cloud-validation

./: .factory_version  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
isvctl/: README.md  pyproject.toml
isvctl/configs/: overrides.yaml
isvctl/configs/providers/: k3s.yaml  microk8s.yaml  minikube.yaml
isvctl/configs/suites/: README.md  bare_metal.yaml  block-storage.yaml  control-plane.yaml  dpu_health.yaml  foundational.yaml  hardware_ingestion.yaml  hss.yaml  iam.yaml  image-registry.yaml  k8s.yaml  network.yaml  observability.yaml  security.yaml  (+3 more)
isvctl/schemas/: config.schema.json
isvctl/scripts/: check_schemas.py  yaml2json.py
isvctl/tests/: __init__.py  conftest.py  test_aws_bare_metal_launch_instance.py  test_aws_block_storage_scripts.py  test_aws_delete_retry.py  test_aws_eks_node_pool_scripts.py  test_aws_home_directory.py  test_aws_network_scripts.py  test_aws_observability_scripts.py  test_aws_security_scripts.py  test_aws_serial_console_scripts.py  test_aws_ssh_utils.py  test_aws_storage_scripts.py  test_aws_verified_reuse.py  test_aws_vm_console_rbac.py  test_aws_vm_reboot_instance.py  test_aws_vm_virtual_device_hardening.py  test_capability_resolution.py  test_capacity_config.py  test_catalog_cli.py  test_cleaner_cli.py  test_cleaner_operations.py  test_cleaner_runner.py  test_cli_configure.py  test_cli_init.py  test_cli_streams.py  test_component_key_access_contract.py  test_doctor_cli.py  test_merger.py  test_nico_provider.py  test_orchestrator.py  test_orchestrator_loop.py  test_platform_resolution.py  test_provider_label_discovery.py  test_redaction.py  test_remote_archive.py  test_remote_ssh.py  test_remote_transfer.py  test_reporting.py  test_schema.py  (+6 more)
(+849 files in other folders)
